# Polls_Project

./: MANIPEST.in  README.rst  admin.py  models.py  pyproject.toml  setup.cfg  urls.py  views.py
migrations/: 0001_initial.py  0002_alter_questions_publ_time.py  0003_alter_questions_publ_time.py
static/polls/: style.css
templates/admin/: base_site.html
templates/polls/: detail.html  index.html  result.html
