
[metadata]
name = first_polls_app
version = 1.0.0
description = A simple Django app to conduct web-based polls.
long description = file: README.rst
url https://www.ethans.co.in/
author = Ethans
author email = admin@ethans.co.in
license BSD-3-Clause # Example license
classifiers -
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include package data = true
packages find : -
python_requires >- 3.9
install requires = django >- 4.1